# pystart-cli

./: .gitignore  README.md  pyproject.toml
pystart/: main.py
pystart/templates/: default.py  fastapi.py
tests/: test_main.py
